--- a/code.css
+++ b/code.css
@@ -1,4 +1,8 @@
-container {
-    margin: 50px;
-    padding: 100px;
+td {
+    border: 1px solid #333;
+}
+
+tfoot {
+    background-color: #333;
+    color: #fff;
 }
