--- a/code.css
+++ b/code.css
@@ -1,8 +1,43 @@
-td {
-    border: 1px solid #333;
-}
-
-tfoot {
-    background-color: #333;
-    color: #fff;
-}
+    body {
+        margin: 10px;
+        padding: 50px;
+    }
+    
+    header {
+        background: red;
+        background-image: url(file:///C:/Users/Elève/Documents/Projet%20Final/img/plat%20acceuil.jpg);
+        text-align: center;
+        width: 100%;
+        margin: 0;
+        padding: 10px;
+    }
+    
+    .t1 {
+        border: 2px solid black;
+    }
+    
+    table {
+        border-collapse: collapse;
+        width: 300px;
+        margin-bottom: 20px;
+    }
+    
+    table {
+        border-collapse: collapse;
+        width: 300px;
+        margin-bottom: 20px;
+    }
+    
+    .t2 td,
+    .t2 th {
+        border: 1px solid orange;
+        border-spacing: 10px;
+        border: 1px solid black;
+        padding: 10px;
+    }
+    
+    img {
+        text-align: center;
+        margin: auto;
+        display: flex;
+    }
