--- a/code.css
+++ b/code.css
@@ -1,128 +1,92 @@
-    body {
-        margin: 75px;
-        padding: 1em;
-        background-color: rgb(255, 255, 255);
-    }
-    
-    header {
-        background-image: url(file:///C:/Users/Elève/Documents/Projet%20Final/img/plaat.jpg);
-        text-align: center;
-        width: 100%;
-        margin: 0;
-        padding: 10px;
-    }
-    
-    table {
-        border-collapse: collapse;
-        width: auto;
-        margin-bottom: 20px;
-        margin: auto;
-    }
-    
-    .T2 {
-        text-align: center;
-    }
-    
-    .t2 td,
-    .t2 th {
-        border-spacing: 150px;
-        border: 50px solid rgb(255, 255, 255);
-        text-align: center;
-        table-layout: fixed;
-        width: auto;
-    }
-    
-    img {
-        width: 450px;
-        height: auto;
-        display: flex;
-        align-content: center;
-    }
-    
-    .center {
-        text-align: center;
-        align-content: center;
-        align-items: center;
-    }
-    
-    .img-responsive {
-        display: block;
-        height: auto;
-        max-width: 100 %;
-    }
-    
-    .title-big {
-        color: aliceblue;
-    }
-    
-    #menu {
-        position: fixed;
-        right: 0;
-        top: 50%;
-        width: 8em;
-        margin-top: -2.5em;
-    }
-    
-    p {
-        text-align: center;
-    }
-    
-    <style>form {
-        /* Uniquement centrer le formulaire sur la page */
-        margin: 0 auto;
-        width: 400px;
-        /* Encadré pour voir les limites du formulaire */
-        padding: 1em;
-        border: 1px solid #CCC;
-        border-radius: 1em;
-    }
-    
-    form div+div {
-        margin-top: 1em;
-    }
-    
-    label {
-        /* Pour être sûrs que toutes les étiquettes ont même taille et sont correctement alignées */
-        display: inline-block;
-        width: 90px;
-        text-align: right;
-    }
-    
-    input,
-    textarea {
-        /* Pour s'assurer que tous les champs texte ont la même police.
-           Par défaut, les textarea ont une police monospace */
-        font: 1em sans-serif;
-        /* Pour que tous les champs texte aient la même dimension */
-        width: 300px;
-        box-sizing: border-box;
-        /* Pour harmoniser le look & feel des bordures des champs texte */
-        border: 1px solid #999;
-    }
-    
-    input:focus,
-    textarea:focus {
-        /* Pour souligner légèrement les éléments actifs */
-        border-color: #000;
-    }
-    
-    textarea {
-        /* Pour aligner les champs texte multi‑ligne avec leur étiquette */
-        vertical-align: top;
-        /* Pour donner assez de place pour écrire du texte */
-        height: 5em;
-    }
-    
-    .button {
-        /* Pour placer le bouton à la même position que les champs texte */
-        padding-left: 90px;
-        /* même taille que les étiquettes */
-    }
-    
-    button {
-        /* Cette marge supplémentaire représente grosso modo le même espace que celui
-           entre les étiquettes et les champs texte */
-        margin-left: .5em;
-    }
-    
-    </style>
+                body {
+                    margin: 75px;
+                    padding: 1em;
+                    background-color: rgb(252, 239, 166);
+                }
+                
+                header {
+                    background-image: url(file:///C:/Users/Elève/Documents/Projet%20Final/img/plaat.jpg);
+                    text-align: center;
+                    width: 100%;
+                    margin: 0;
+                    padding: 10px;
+                }
+                
+                table {
+                    border-collapse: collapse;
+                    width: auto;
+                    margin-bottom: 20px;
+                    margin: auto;
+                }
+                
+                .T2 {
+                    text-align: center;
+                }
+                
+                .t2 td,
+                .t2 th {
+                    border-spacing: 150px;
+                    border: 50px solid rgb(255, 255, 255);
+                    text-align: center;
+                    table-layout: fixed;
+                    width: auto;
+                }
+                
+                img {
+                    width: 450px;
+                    height: auto;
+                    display: flex;
+                    align-content: center;
+                }
+                
+                .center {
+                    text-align: center;
+                    align-content: center;
+                    align-items: center;
+                }
+                
+                .img-responsive {
+                    display: block;
+                    height: auto;
+                    max-width: 100 %;
+                }
+                
+                .title-big {
+                    color: aliceblue;
+                }
+                
+                #menu {
+                    position: fixed;
+                    right: 0;
+                    top: 50%;
+                    width: 8em;
+                    margin-top: -2.5em;
+                }
+                
+                section {
+                    display: flex;
+                    height: 160px;
+                    background: rgb(255, 182, 122);
+                    align-content: center;
+                }
+                
+                .carousel-control-prev-icon {
+                    background-image: url(../images/previous-32.png);
+                    width: 32px;
+                    height: 32px;
+                }
+                
+                .p2 {
+                    text-align: center;
+                    font-size: 1.5em;
+                    font-style: monospace;
+                }
+                
+                .fixe {
+                    position: fixed;
+                    top: 0;
+                    left: 0;
+                    width: 100%;
+                    height: 75px;
+                    background-color: rgb(252, 243, 206);
+                }
